tests/strict_es6_import_export_excludes/strict_es6_import_export_excludes.exp
Error --------------------------------------------------------------------------------------------------------- c.js:4:9

The default export of a module cannot be accessed from import destructuring. To use the default export you must import
it directly. [default-import-access]

   4| import {default as foo} from './foo';
              ^^^^^^^



Found 1 error
